Pretty git/yadm log

--- a/.gitconfig
+++ b/.gitconfig
@@ -4,3 +4,5 @@
 	name = Lev Danielyan
 	email = lev@danielyan.org
 
+[alias]
+lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%Creset' --abbrev-commit --date=relative
