--- a/.config/vscode/settings.json
+++ b/.config/vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "workbench.colorTheme": "Atom One Dark",
+  "workbench.colorTheme": "Catppuccin Macchiato",
   "security.workspace.trust.untrustedFiles": "open",
   "[javascript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
@@ -12,16 +12,16 @@
   },
   "git.autofetch": true,
   "git.confirmSync": false,
-  "editor.fontFamily": "Fira Code",
+  "editor.fontFamily": "Iosevka",
   "editor.fontLigatures": true,
-  "editor.fontSize": 13,
+  "editor.fontSize": 15,
   "liveServer.settings.donotShowInfoMsg": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
   "editor.tabSize": 2,
   "editor.detectIndentation": false,
   "typescript.updateImportsOnFileMove.enabled": "never",
-  "workbench.iconTheme": "catppuccin-frappe",
+  "workbench.iconTheme": "catppuccin-macchiato",
 
   // Scrollbars
   "editor.scrollbar.verticalScrollbarSize": 10,
@@ -34,5 +34,7 @@
   "editor.guides.highlightActiveBracketPair": true, // highlight both horizontal and vertical lines
   "editor.bracketPairColorization.enabled": true,
   "editor.bracketPairColorization.independentColorPoolPerBracketType": true,
-  "editor.guides.indentation": true
+  "editor.guides.indentation": true,
+  "catppuccin.italicKeywords": false,
+  "catppuccin.italicComments": false
 }
