vscode extensions install

--- a/.config/vscode/settings.json
+++ b/.config/vscode/settings.json
@@ -14,7 +14,7 @@
   "git.confirmSync": false,
   "editor.fontFamily": "Iosevka",
   "editor.fontLigatures": true,
-  "editor.fontSize": 15,
+  "editor.fontSize": 13,
   "liveServer.settings.donotShowInfoMsg": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
@@ -36,5 +36,7 @@
   "editor.bracketPairColorization.independentColorPoolPerBracketType": true,
   "editor.guides.indentation": true,
   "catppuccin.italicKeywords": false,
-  "catppuccin.italicComments": false
+  "catppuccin.italicComments": false,
+  "editor.rulers": [80],
+  "git.enableSmartCommit": true
 }
