--- a/.config/vscode/settings.json
+++ b/.config/vscode/settings.json
@@ -14,7 +14,7 @@
   "git.confirmSync": false,
   "editor.fontFamily": "Iosevka",
   "editor.fontLigatures": true,
-  "editor.fontSize": 13,
+  "editor.fontSize": 15,
   "liveServer.settings.donotShowInfoMsg": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
@@ -38,5 +38,6 @@
   "catppuccin.italicKeywords": false,
   "catppuccin.italicComments": false,
   "editor.rulers": [80],
-  "git.enableSmartCommit": true
+  "git.enableSmartCommit": true,
+  "jest.runMode": "on-demand"
 }
